--- a/index.html
+++ b/index.html
@@ -6,27 +6,50 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/swagger-ui/3.25.0/swagger-ui.css" >
     <script src="https://cdnjs.cloudflare.com/ajax/libs/swagger-ui/3.25.0/swagger-ui-bundle.js"> </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/swagger-ui/3.25.0/swagger-ui-standalone-preset.js"> </script>
+    
+    <!-- Добавляем внутренние стили для фона -->
+    <style>
+        /* Устанавливаем изображение фоном для body */
+        body {
+            background-image: url('logo.jpg'); /* Путь к вашему изображению */
+            background-size: cover; /* Масштабирование фона, чтобы покрыть весь экран */
+            background-repeat: no-repeat; /* Запрет повторения изображения */
+            background-position: center center; /* Центрирование изображения */
+            height: 100vh; /* Высота страницы */
+            margin: 0; /* Убираем отступы */
+            padding: 0; /* Убираем внутренние отступы */
+        }
+
+        /* Опционально: Добавляем полупрозрачный фон для контейнера Swagger UI для улучшения читаемости */
+        #swagger-ui {
+            background: rgba(255, 255, 255, 0.8); /* Белый фон с прозрачностью 80% */
+            border-radius: 8px; /* Скругление углов */
+            padding: 20px; /* Внутренние отступы */
+            max-width: 1200px; /* Максимальная ширина */
+            margin: 40px auto; /* Центрирование по горизонтали с верхним и нижним отступом */
+        }
+    </style>
 </head>
 <body>
-<div id="swagger-ui"></div>
-<script>
-    window.onload = function() {
-        // Инициализация Swagger UI
-        const ui = SwaggerUIBundle({
-            url: "swagger.json", // Путь к вашему файлу спецификации
-            dom_id: '#swagger-ui',
-            deepLinking: true,
-            presets: [
-                SwaggerUIBundle.presets.apis,
-                SwaggerUIStandalonePreset
-            ],
-            plugins: [
-                SwaggerUIBundle.plugins.DownloadUrl
-            ],
-            layout: "StandaloneLayout"
-        })
-        window.ui = ui
-    }
-</script>
+    <div id="swagger-ui"></div>
+    <script>
+        window.onload = function() {
+            // Инициализация Swagger UI
+            const ui = SwaggerUIBundle({
+                url: "swagger.json", // Путь к вашему файлу спецификации
+                dom_id: '#swagger-ui',
+                deepLinking: true,
+                presets: [
+                    SwaggerUIBundle.presets.apis,
+                    SwaggerUIStandalonePreset
+                ],
+                plugins: [
+                    SwaggerUIBundle.plugins.DownloadUrl
+                ],
+                layout: "StandaloneLayout"
+            })
+            window.ui = ui
+        }
+    </script>
 </body>
 </html>
