--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         body {
             background-image: url('logo.jpg'); /* Путь к вашему изображению */
             background-size: cover; /* Масштабирование фона, чтобы покрыть весь экран */
-            background-repeat: no-repeat; /* Запрет повторения изображения */
+            background-attachment: fixed; /* Изображение будет "прилипшим" к экрану при скролле */
             background-position: center center; /* Центрирование изображения */
             height: 100vh; /* Высота страницы */
             margin: 0; /* Убираем отступы */
@@ -27,6 +27,10 @@
             padding: 20px; /* Внутренние отступы */
             max-width: 1200px; /* Максимальная ширина */
             margin: 40px auto; /* Центрирование по горизонтали с верхним и нижним отступом */
+        }
+
+        .topbar {
+            display: none;
         }
     </style>
 </head>
