--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
                 ],
                 layout: "StandaloneLayout"
             })
+
+            document.querySelector('.topbar').remove();
+            
             window.ui = ui
         }
     </script>
