--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
         .topbar {
             display: none;
+            float: right;
         }
     </style>
 </head>
@@ -52,8 +53,6 @@
                 ],
                 layout: "StandaloneLayout"
             })
-
-            document.querySelector('.topbar').remove();
             
             window.ui = ui
         }
