--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
             box-shadow: none;
         }
 
+        .scheme-container {
+            background: rgba(255, 255, 255, 0.8);
+        }
+
         /* Для полей ввода */
         .swagger-ui .servers {
             opacity: 0.8; /* Прозрачность для полей ввода */
