--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
 
         .topbar {
             display: none;
-            float: right;
+        }
+
+        .wrapper {
+            display: none;
         }
     </style>
 </head>
