--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             box-shadow: none;
         }
 
-        .scheme-container {
+        .schemes wrapper block col-12 {
             background: rgba(255, 255, 255, 0.8);
         }
 
