--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
             opacity: 0.8; /* Прозрачность для полей ввода */
         }
 
+        .block col-12 block-desktop col-12-desktop {
+            display: none;
+        }
+
         .topbar {
             display: none;
         }
